# OuterMemoryGraph

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  RESEARCH.md  shell.nix
docs/: alternatives.md  file-format.md  formats.md  project-guide.md  report.md  solution.md  verification.md
include/omg/: input.hpp  manifest.hpp  pagerank.hpp  preprocess.hpp  types.hpp
scripts/: benchmark_threads.py  check_memory.sh  validate_output.py
src/: input.cpp  main.cpp  manifest.cpp  pagerank.cpp  preprocess.cpp
tests/: input_test.cpp  manifest_test.cpp  pagerank_test.cpp  preprocess_test.cpp  temp_path.hpp
tests/data/graphalytics/: README.md  test-pr-directed-PR  test-pr-directed.e  test-pr-directed.properties
